--- a/assets/style/admin/section_pc.css
+++ b/assets/style/admin/section_pc.css
@@ -5,21 +5,21 @@
     -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;
     -webkit-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2); -moz-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2); box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.2);
 }
-	.ui-sortable #metabox_buzzpress_sections ul li{
+	#metabox_buzzpress_sections ul li{
 		background: white;
 		padding: 20px;
 		margin: 0 0 10px 0;
 		border: 1px solid #e5e5e5;
 		text-align: center;
 	}
-		.ui-sortable #metabox_buzzpress_sections ul li ul li{
+		#metabox_buzzpress_sections ul li ul li{
 			display: inline-block;
 			padding: 10px;
 			margin: 10px 10px 0 0;
 			background: #f5f5f5;
 			border: 1px solid #e5e5e5;
 		}
-		.ui-sortable #metabox_buzzpress_sections ul li ul li:last-child{ margin-right: 0; }
+		#metabox_buzzpress_sections ul li ul li:last-child{ margin-right: 0; }
 
 
 .ui-sortable li{
