--- a/assets/style/admin/section_pc.css
+++ b/assets/style/admin/section_pc.css
@@ -43,7 +43,7 @@ span.delete_panneau_in_config{
 }
 
 
-.link_upload_img_wpextend img{ max-width: 200px; }
+.link_upload_img_wpextend img{ max-width: 200px; min-width: 140px; }
 
 
 
