--- a/assets/style/admin/custom_field.css
+++ b/assets/style/admin/custom_field.css
@@ -56,14 +56,42 @@ body.wp-extend_page_wpextend_custom_fields .liCustomField{
 	.link_upload_img_wpextend:focus{
 		box-shadow: none;
 	}
-.contner_list_images ul li{
+.contner_list_images ul li,
+.contner_list_files ul li{
 	position: relative;
 	display: inline-block;
 	margin: 0 10px 10px 0;
 	border: none;
     background: none;
-    cursor: move;
+    width: 150px;
+    height: 150px;
 }
+.contner_list_images ul.sortable li,
+.contner_list_files ul.sortable li{
+	cursor: move;
+}
+	.contner_list_files ul li .file{
+		display: inline-block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 150px;
+    	height: 150px;
+    	background: rgb(250,250,250);
+    	border: 1px solid rgb(245,245,245);
+    	word-wrap: break-word;
+	    padding: 10px;
+	    box-sizing: border-box;
+	    text-align: center;
+	    vertical-align: middle;
+	    line-height: 150px;
+	}
+		.contner_list_files ul li .file span,
+		.contner_list_files ul li .file a{
+			display: inline-block;
+			width: 100%;
+			line-height: 18px;
+		}
 .link_remove_img_wpextend,
 .remove_image_gallery{
 	display:none;
@@ -75,15 +103,20 @@ body.wp-extend_page_wpextend_custom_fields .liCustomField{
 	cursor: pointer;
 }
 .contner_list_images ul li:hover > .link_remove_img_wpextend,
-.contner_list_images ul li:hover > .remove_image_gallery{
+.contner_list_images ul li:hover > .remove_image_gallery,
+.contner_list_files ul li:hover > .link_remove_img_wpextend,
+.contner_list_files ul li:hover > .remove_image_gallery{
 	display: inline-block;
 	text-decoration: none;
 }
-.contner_list_images ul li:hover > .link_remove_img_wpextend.hidden{
+.contner_list_images ul li:hover > .link_remove_img_wpextend.hidden,
+.contner_list_files ul li:hover > .link_remove_img_wpextend.hidden{
 	display: none;
 }
 	.contner_list_images ul li .link_remove_img_wpextend:hover,
-	.contner_list_images ul li .remove_image_gallery:hover{
+	.contner_list_images ul li .remove_image_gallery:hover,
+	.contner_list_files ul li .link_remove_img_wpextend:hover,
+	.contner_list_files ul li .remove_image_gallery:hover{
 		color: #006799;
 		background: white;
 	}
