--- a/assets/style/admin/custom_field.css
+++ b/assets/style/admin/custom_field.css
@@ -81,6 +81,7 @@ body.wp-extend_page_wpextend_custom_fields .liCustomField{
 		top: 0;
 		left: 0;
 		max-width: 100%;
+		max-height: 100%;
 	}
 	.contner_multiple_media ul li .file{
 		width: 150px;
