--- a/assets/style/admin/mainWpextend.css
+++ b/assets/style/admin/mainWpextend.css
@@ -162,3 +162,149 @@ body.wp-admin .repeat_field{
     border-radius: 8px;
     cursor: pointer;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/** OLD custom-field.css */
+body.wp-extend_page_wpextend_custom_fields .form_add_custom_field .tr_metabox th, body.wp-extend_page_wpextend_custom_fields .form_add_custom_field .tr_metabox td,
+body.wp-extend_page_wpextend_custom_fields .form_add_custom_field .tr_post_type th, body.wp-extend_page_wpextend_custom_fields .form_add_custom_field .tr_post_type td,
+body.wp-extend_page_wpextend_custom_fields .form_add_custom_field .tr_post_type_options th, body.wp-extend_page_wpextend_custom_fields .form_add_custom_field .tr_post_type_options td,
+body.wp-extend_page_wpextend_custom_fields .form_add_metabox .tr_post_type th, body.wp-extend_page_wpextend_custom_fields .form_add_metabox .tr_post_type td{
+	display: none;
+}
+
+body.wp-extend_page_wpextend_custom_fields .li_postType.section-buzzpress th, body.wp-extend_page_wpextend_custom_fields .li_postType.section-buzzpress td{
+	display: table-cell;
+}
+
+body.wp-extend_page_wpextend_custom_fields .ulMetabox{
+	list-style: none;
+}
+
+body.wp-extend_page_wpextend_custom_fields .liMetabox{
+	border: 1px solid rgb(220,220,220);
+	background: rgb(245,245,245);
+	float: left;
+	width: 33%;
+	margin: 0 0.5% 0.5% 0;
+	padding: 1rem;
+	box-sizing: border-box;
+}
+body.wp-extend_page_wpextend_custom_fields .liMetabox:nth-child(3n){
+	margin-right: 0;
+}
+
+body.wp-extend_page_wpextend_custom_fields .liCustomField{
+	border: 1px solid rgb(220,220,220);
+	background: rgb(235,235,235);
+   padding: 1rem;
+}
+
+
+.rootAccordionCustomFields { background: none; padding: 0; }
+
+
+.container_sliderange{ display: table; }
+.container_sliderange .div_sliderrange{ margin-bottom: 10px; }
+
+
+
+
+
+
+
+/**
+* Module gestionnaire-image-admin
+**/
+.contner_multiple_media ul li{
+	position: relative;
+	display: inline-block;
+	margin: 0 10px 10px 0;
+	border: none;
+    background: none;
+    width: 150px;
+    height: 150px;
+    border: 2px dashed rgb(240,240,240);
+}
+.contner_multiple_media ul li.null{ display: none; }
+.contner_multiple_media ul li.add_multiple_media_wpextend a{
+	display: block;
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    vertical-align: middle;
+	line-height: 150px;
+	font-size: 2.5em;
+}
+.contner_multiple_media ul.sortable li{
+	cursor: move;
+}
+	.contner_multiple_media ul li img,
+	.contner_multiple_media ul li .file{
+		display: inline-block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		max-width: 100%;
+		max-height: 100%;
+	}
+	.contner_multiple_media ul li .file{
+		width: 150px;
+    	height: 150px;
+    	background: rgb(250,250,250);
+    	word-wrap: break-word;
+	    padding: 10px;
+	    box-sizing: border-box;
+	    text-align: center;
+	    vertical-align: middle;
+	    line-height: 150px;
+	}
+		.contner_multiple_media ul li .file span,
+		.contner_multiple_media ul li .file a{
+			display: inline-block;
+			width: 100%;
+			line-height: 18px;
+		}
+.single_media_wpextend .link_upload_multiple_media_wpextend,
+.single_media_wpextend .remove_multiple_media_wpextend{
+	display:none;
+	position: absolute;
+	top: 10px;
+	color: #0085ba;
+	background: #f1f1f1;
+	cursor: pointer;
+}
+.single_media_wpextend .link_upload_multiple_media_wpextend{
+	left: 10px;
+}
+.single_media_wpextend .remove_multiple_media_wpextend{
+	right: 10px;
+}
+.contner_multiple_media ul li:hover > .link_upload_multiple_media_wpextend,
+.contner_multiple_media ul li:hover > .remove_multiple_media_wpextend{
+	display: inline-block;
+	text-decoration: none;
+}
+	.single_media_wpextend .link_upload_multiple_media_wpextend:hover,
+	.single_media_wpextend .remove_multiple_media_wpextend:hover{
+		color: #006799;
+		background: white;
+	}
