Add settings page : work in progress...

--- a/src/scss/admin/_common.scss
+++ b/src/scss/admin/_common.scss
@@ -45,6 +45,32 @@ ul {
     }
 }
 
+.mt-1 {
+
+    margin-top: 1rem;
+}
+
+.mt-2 {
+
+    margin-top: 2rem;
+}
+
+.mt-3 {
+
+    margin-top: 3rem;
+}
+
+.mt-4 {
+
+    margin-top: 4rem;
+}
+
+
+.white {
+
+    background: white
+} 
+
 .fieldset_wpextend {
 
     margin: 0 0.5% 0.5% 0;
