--- a/src/scss/admin/_image_handler.scss
+++ b/src/scss/admin/_image_handler.scss
@@ -77,7 +77,7 @@
             }
 
             &:hover > .link_upload_multiple_media_wpextend,
-            &:hover > .link_upload_multiple_media_wpextend {
+            &:hover > .remove_multiple_media_wpextend {
                 display: inline-block;
                 text-decoration: none;
             }
@@ -97,11 +97,12 @@
 
     .link_upload_multiple_media_wpextend {
 
-        display:none;
+        display: none;
         position: absolute;
         top: 10px;
         color: #0085ba;
         background: #f1f1f1;
+        border: 1px solid rgba(0, 133, 186, 0.6);
         cursor: pointer;
         left: 10px;
 
@@ -114,11 +115,12 @@
 
     .remove_multiple_media_wpextend {
 
-        display:none;
+        display: none;
         position: absolute;
         top: 10px;
         color: #0085ba;
         background: #f1f1f1;
+        border: 1px solid rgba(0, 133, 186, 0.6);
         cursor: pointer;
         right: 10px;
 
